internal/compiler/testdata/fuzz/crashers/df4bbb444b299f71fbe7c955d37e03d666b8a053.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0x0, 0xc00011ce68, 0x110bec6, 0xc000186e40, 0x11a0002)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012e580, 0xc000010400, 0x8, 0x200, 0x40)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b5
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012eb00, 0x11a8840, 0xc000010400, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x67a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012e2c0, 0x11a8840, 0xc0000103f0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012d8c0, 0x11a8840, 0xc0000103e0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012d080, 0x11a8840, 0xc0000103d0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012c840, 0x11a8840, 0xc0000103c0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012c000, 0x11a8840, 0xc0000103b0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012b600, 0x11a8840, 0xc0000103a0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c240, 0xc00012adc0, 0x11a9640, 0xc00002bec0, 0xc00011dae8, 0x11069fc)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c240, 0xc00005a180, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xc00011db38, 0x100b456)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x221
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c240, 0xc0001143c0, 0x100b456, 0xc000186ec0, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c240, 0xc0001143c0, 0x0, 0xc00011dc60, 0x1010f93, 0xc000186ec0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x129
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c240, 0xc0001121e0, 0x0, 0x2, 0xc000016433, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c240, 0xc000110300, 0x0, 0x2, 0xc000016433, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c240, 0xc000110300, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x8a21000, 0x18, 0x18, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00011df70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2